# annbatch_grouped

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
benchmarks/: README.md  bench_permute.py  bench_shuffle.py  bench_split.py  helpers.py
plans/: chunk_passthrough.md
scripts/: append_labels.py  bench.py  bench.sbatch  bench_indexing.sbatch  bench_sim.py  convert_h5ad_to_zarr.py  convert_h5ad_to_zarr.sbatch  create_datasets.py  install.sh  launch_benches.py  launch_indexing_bench.py  plot_bench_gallery.py  plot_bench_indexing.py  plot_bench_landscape.py  preview_labels.py  rewrite_tahoe_zarr.py  run_demo.py  run_stress.py  shuffle_zarr.py  simulate_io.py  truncate_zarr.py
src/annbatch_grouped/: __init__.py  baselines.py  bench_utils.py  data_gen.py  default_profile_lists.py  paths.py  plotting.py  runners.py
tests/: conftest.py  test_create_datasets.py
