[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "annbatch_grouped"
version = "0.0.1"
description = "Benchmarking grouped/categorical loading with annbatch."
requires-python = ">=3.11"
license = "BSD-3-Clause"
readme = "README.md"
dependencies = [
    "annbatch",
    "anndata",
    "click",
    "numpy",
    "pandas",
    "scipy",
    "tqdm",
    "zarr",
    "zarrs",
]

[project.optional-dependencies]
viz = [
    "matplotlib",
    "seaborn",
    "jupyter",
    "ipykernel",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/annbatch_grouped"]
