[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "annbatch-grouped"
version = "0.0.1"
description = "Benchmarking grouped/categorical loading with annbatch."
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "annbatch @ git+https://github.com/selmanozleyen/annbatch.git@feat/groupby-collection-v3",
  "anndata",
  "anndata_rs @ git+https://github.com/selmanozleyen/anndata-rs.git@feat/ooc-permutation-engine#subdirectory=python",
  "click",
  "numpy",
  "pandas",
  "scipy",
  "tqdm",
  "zarr",
  "zarrs>=0.2.2",
]
optional-dependencies.viz = [
  "ipykernel",
  "jupyter",
  "matplotlib",
  "seaborn",
]

[dependency-groups]
dev = [
  "pre-commit",
]
test = [
  "coverage>=7.10",
  "pytest",
  "pytest-cov",
]

[tool.hatch]
envs.default.installer = "uv"
envs.default.dependency-groups = [ "dev" ]
build.targets.wheel.packages = [ "src/annbatch_grouped" ]
metadata.allow-direct-references = true

[tool.ruff]
line-length = 120
src = [ "src" ]
extend-include = [ "*.ipynb" ]
format.docstring-code-format = true
lint.select = [
  "B",      # flake8-bugbear
  "BLE",    # flake8-blind-except
  "C4",     # flake8-comprehensions
  "E",      # pycodestyle errors
  "F",      # pyflakes
  "I",      # isort
  "RUF100", # unused noqa directives
  "TID",    # flake8-tidy-imports
  "UP",     # pyupgrade
  "W",      # pycodestyle warnings
]
lint.ignore = [
  "E501", # line too long -- formatter handles code lines; we accept long comments
  "E731", # lambda assignments are fine
  "E741", # allow I, O, l as variable names
]
lint.per-file-ignores."*/__init__.py" = [ "F401" ]
lint.per-file-ignores."scripts/*" = [ "D" ]
lint.per-file-ignores."tests/*" = [ "D" ]
lint.pydocstyle.convention = "numpy"

[tool.pytest]
strict = true
testpaths = [ "tests" ]
addopts = [
  "--import-mode=importlib",
]
